--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ where=src
 
 [options.entry_points]
 console_scripts =
-    autowallet = auto_chia_wallet.auto_wallet:main
+    autowallet = auto_chia_wallet.cli:main
 
 [options.data_files]
 config = src/auto_chia_wallet/defaults/config.yaml
