--- a/setup.cfg
+++ b/setup.cfg
@@ -2,12 +2,12 @@
 name = auto_chia_wallet
 version = file: VERSION
 author = James Hoerr
-home-page = https://github.com/DaOneLuna/auto-chia-wallet
+home_page = https://github.com/DaOneLuna/auto-chia-wallet
 description = Chia Account and PlotNFT Generator
-long-description = file: README.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 license = Apache 2.0
-license-file = LICENSE
+license_file = LICENSE
 python_requires = >=3.7
 keywords = chia, blockchain, automation
 classifiers =
