--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include CHANGELOG.md
 include LICENSE
 include *.md
-include VERSION
+include src/auto_chia_wallet/VERSION
 recursive-include src *.py
