--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,9 @@ package_dir=
     =src
 packages=find:
 install_requires =
+    asyncio
     appdirs
+    argparse
     desert
     marshmallow
     psutil ~= 5.8
