Hopefully fixed module paths

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    =src
+    =auto_chia_wallet
 packages=find:
 install_requires =
     asyncio
