--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    =auto_chia_wallet
+    =src
 packages=find:
 install_requires =
     asyncio
@@ -39,6 +39,7 @@ install_requires =
     argparse
     desert
     marshmallow
+    marshmallow-enum
     psutil ~= 5.8
     pyyaml
     chia-blockchain
