Moved out of src folder, updated setup config

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,8 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    =src
-packages=find:
+    =./
+package=auto_chia_wallet
 install_requires =
     asyncio
     appdirs
@@ -43,9 +43,6 @@ install_requires =
     psutil ~= 5.8
     pyyaml
     chia-blockchain
-
-[options.packages.find]
-where=src
 
 [options.entry_points]
 console_scripts =
