--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,8 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    =src
-packages=find:
+    =./
+package=auto_chia_wallet
 install_requires =
     asyncio
     appdirs
@@ -44,12 +44,9 @@ install_requires =
     pyyaml
     chia-blockchain
 
-[options.packages.find]
-where=src
-
 [options.entry_points]
 console_scripts =
     autowallet = auto_chia_wallet.cli:main
 
 [options.data_files]
-config = src/auto_chia_wallet/defaults/config.yaml
+config = auto_chia_wallet/defaults/config.yaml
