--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,6 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
-    Topic :: System :: Monitoring
     Topic :: System :: Systems Administration
     Topic :: Utilities
 project_urls =
@@ -31,8 +30,8 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    =./
-package=auto_chia_wallet
+    = ../
+packages = ['auto_chia_wallet']
 install_requires =
     asyncio
     appdirs
@@ -46,7 +45,10 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    autowallet = auto_chia_wallet::main
+    autowallet = auto_chia_wallet:main
 
 [options.data_files]
 config = auto_chia_wallet/defaults/config.yaml
+
+[options.packages.find]
+where = ""
