Updates to Config

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    autowallet = auto_chia_wallet
+    autowallet = auto_chia_wallet::main
 
 [options.data_files]
 config = auto_chia_wallet/defaults/config.yaml
