Updates to Config

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,6 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
-    Topic :: System :: Monitoring
     Topic :: System :: Systems Administration
     Topic :: Utilities
 project_urls =
@@ -31,8 +30,8 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    =./
-package=auto_chia_wallet
+    =
+packages = find:
 install_requires =
     asyncio
     appdirs
@@ -50,3 +49,6 @@ console_scripts =
 
 [options.data_files]
 config = auto_chia_wallet/defaults/config.yaml
+
+[options.packages.find]
+where =
