Updates to Config

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    =
+    = ./
 packages = find:
 install_requires =
     asyncio
@@ -51,4 +51,4 @@ console_scripts =
 config = auto_chia_wallet/defaults/config.yaml
 
 [options.packages.find]
-where =
+where = ./
