Updates to Config

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ project_urls =
 include_package_data = True
 package_dir=
     = ./
-packages = find:
+packages = ['auto_chia_wallet']
 install_requires =
     asyncio
     appdirs
@@ -51,4 +51,4 @@ console_scripts =
 config = auto_chia_wallet/defaults/config.yaml
 
 [options.packages.find]
-where = ./
+where = ""
