--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    autowallet = cli::main
+    autowallet = auto_chia_wallet.cli::main
 
 [options.data_files]
 config = auto_chia_wallet/defaults/config.yaml
