Updates to Config

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    = ../auto_chia_wallet
+    = ./auto_chia_wallet
 packages = ['auto_chia_wallet']
 install_requires =
     asyncio
