--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,8 @@ project_urls =
 [options]
 include_package_data = True
 package_dir=
-    = ../
-packages = ['auto_chia_wallet']
+    = ./
+packages = auto_chia_wallet
 install_requires =
     asyncio
     appdirs
