Console Script Endpoint
Console Script Endpoint

Console Script Endpoint

Console Script Endpoint

Console Script Endpoint

Console Script Endpoint

Console Script Endpoint

Console Script Endpoint

Console Script Endpoint

Console Script Endpoint

Console Script Endpoint

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,10 @@ project_urls =
 include_package_data = True
 package_dir=
     = ./
-packages = auto_chia_wallet
+packages =
+    auto_chia_wallet
+    auto_chia_wallet.defaults
+
 install_requires =
     asyncio
     appdirs
@@ -45,7 +48,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    autowallet = auto_chia_wallet:main
+    autowallet = auto_chia_wallet.cli:main
 
 [options.data_files]
 config = auto_chia_wallet/defaults/config.yaml
