--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ project_urls =
 include_package_data = True
 package_dir=
     = ./
-packages = auto_chia_wallet
+packages=find:
 install_requires =
     asyncio
     appdirs
