Console Script Endpoint

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,9 @@ project_urls =
 
 [options]
 include_package_data = True
-
-packages=find:
+package_dir=
+    = ./
+packages = auto_chia_wallet
 install_requires =
     asyncio
     appdirs
