Console Script Endpoint

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,10 @@ project_urls =
 include_package_data = True
 package_dir=
     = ./
-packages = auto_chia_wallet
+packages =
+    auto_chia_wallet
+    auto_chia_wallet.defaults
+
 install_requires =
     asyncio
     appdirs
