--- a/setup.cfg
+++ b/setup.cfg
@@ -43,8 +43,8 @@ install_requires =
     marshmallow
     marshmallow-enum
     psutil ~= 5.8
-    pyyaml
-    chia-blockchain
+    pyyaml == 5.4.1
+    chia-blockchain == 1.2.11
 
 [options.entry_points]
 console_scripts =
